iconplusTest/k8s/service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops
  labels:
    monitoring: enabled   # penting agar Prometheus autodiscovery bisa include namespace ini
