iconplusTest/k8s/service/go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapi
  namespace: devops
  labels:
    app: goapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goapi
  template:
    metadata:
      labels:
        app: goapi
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: goapi
          image: sotar12/go:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz       # gunakan endpoint khusus health (disarankan)
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz       # jangan gunakan "/" untuk Go API
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: goapi-service
  namespace: devops
  labels:
    app: goapi
spec:
  type: ClusterIP
  selector:
    app: goapi
  ports:
    - name: http
      port: 8080
      targetPort: 8080
