iconplusTest/k8s/service/laravel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: sotar12/laravel:latest
          imagePullPolicy: IfNotPresent
          command: ["sh", "-c"]
          args:
            - |
              php artisan serve --host=0.0.0.0 --port=8001
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: devops
spec:
  selector:
    app: laravel
  ports:
    - name: http-laravel
      port: 8001
      targetPort: 8001
  type: ClusterIP
