iconplusTest/k8s/service/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: devops
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
      annotations:
        prometheus.io/scrape: "false"
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: devops
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-exporter
  namespace: devops
  labels:
    app: mysql-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-exporter
  template:
    metadata:
      labels:
        app: mysql-exporter
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9104"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: mysqld-exporter
          image: prom/mysqld-exporter:v0.15.0
          args:
            - "--config.my-cnf=/.my.cnf"
            - "--web.listen-address=:9104"
            - "--mysqld.address=mysql-service:3306"
          ports:
            - containerPort: 9104
          volumeMounts:
            - name: mysql-exporter-config
              mountPath: /.my.cnf
              subPath: .my.cnf
      volumes:
        - name: mysql-exporter-config
          configMap:
            name: mysql-exporter-config
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-exporter
  namespace: devops
spec:
  selector:
    app: mysql-exporter
  ports:
    - name: metrics
      port: 9104
      targetPort: 9104
  type: ClusterIP
